fix code in hover window unreadable

--- a/Assets/css/moon.css
+++ b/Assets/css/moon.css
@@ -2972,7 +2972,7 @@ span.task-date-overdue {
 }
 
 .markdown pre {
-    background: #f6f8fa;
+    background: #242729;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ddd;
